--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "next": "14.2.4",
