--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
+    "@tabler/icons-react": "^3.6.0",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "next": "14.2.4",
